    around inliner for max and min
  * collect info structures for local functions in flet and labels
    processing (gcl_cmpflet.lsp), and pass upwards to call-local and
    call-global (gcl_cmpeval.lsp) to fix certain inlining bugs in via
    more proper operation of args-info-changed-vars (gcl_cmpinline.lsp,
    inline-args, gcl_cmplet.lsp, c2let)

 -- Camm Maguire <camm@intech.m.enhanced.com>  Fri, 10 Oct 2003 02:31:24 +0000

gcl (2.6.1-12) unstable; urgency=low

  * Restore mpz_to_mpz{1} in gmp_big.c, can be written by compiler
  * tk8.4 patches
  * Prevent destructive modification of bignum arguments in log_op/mp_op
    in gmp_big.c
  * Make sure to push stack variables onto newly allocated C variable
    when inlining args and args cause side effects, in inline-args,
    gcl_cmpinline.lsp
  * Fix bug related to gcc-3.3 fixes in set_exponent in num_co.c
  * Remove pcl_methods.c patch. as is apparently no longer needed, TODO
    -- make sure VOL modifier is inserted where needed to prevent
    longjmp clobbers

 -- Camm Maguire <camm@enhanced.com>  Thu,  2 Oct 2003 14:26:43 +0000

gcl (2.6.1-11) unstable; urgency=low

  * Add compilation step of compiling all lsp and cmpnew .lsp files from
    an interpreted only saved_pre_gcl before the creation of saved_gcl -
    - this enables us to use full optimization on these files while
    getting the STREF constants right on 32bit and 64bit
  * remove 'attic' from comment in gcl_loop.lsp
  * configure changes for sizeof(struct contblock) detection

 -- Camm Maguire <camm@enhanced.com>  Wed, 24 Sep 2003 16:09:44 +0000

gcl (2.6.1-10) unstable; urgency=low

  * Mac OSX GET_FULL_PATH_SELF
  * Preliminary subtypep checking for 'satisfies
  * preliminary 'satisfies support in subtypep, more predicate type
    pairs and reverse checking
  * small compiler change to remove unused C variables from optimized
    compiled macros
  * Optional compiler init file is called gcl_cmpinit
  * fasdmacros.lsp -> gcl_fasdmacros.lsp