@@ -7,8 +7,10 @@ gcl (2.6.1-13) unstable; urgency=low
     call-global (gcl_cmpeval.lsp) to fix certain inlining bugs in via
     more proper operation of args-info-changed-vars (gcl_cmpinline.lsp,
     inline-args, gcl_cmplet.lsp, c2let)
+  * Fix an obviou int overflow in ifloor (o/cmpaux.c), handle more
+    proper fixnum/integer determination from declarations later
 
- -- Camm Maguire <camm@intech.m.enhanced.com>  Fri, 10 Oct 2003 02:31:24 +0000
+ -- Camm Maguire <camm@intech.m.enhanced.com>  Fri, 10 Oct 2003 02:34:11 +0000
 
 gcl (2.6.1-12) unstable; urgency=low
 
